<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="top|center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dip"
        android:paddingTop="20dip"
        android:text="Theme App"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:gravity="center" >

        <Button
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_120"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@drawable/selector"
            android:onClick="onImageListClick"
            android:text="@string/button_image_list"
            android:textColor="@android:color/white" 
            android:textSize="@dimen/dp_20"/>

        <Button
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_120"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@drawable/selector"
            android:onClick="onImageGridClick"
            android:text="@string/button_image_grid"
            android:textSize="@dimen/dp_20"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <Button
        android:layout_width="@dimen/dp_120"
        android:layout_height="@dimen/dp_120"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/selector"
        android:onClick="onImagePagerClick"
        android:text="@string/button_image_pager"
        android:textColor="@android:color/white"
         android:textSize="@dimen/dp_20"/>

    <Button
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:onClick="onImageGalleryClick"
        android:text="@string/button_image_gallery"
        android:visibility="gone" />

    <Button
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:onClick="onFragmentsClick"
        android:text="@string/button_list_and_grid"
        android:visibility="gone" />

</LinearLayout>